--- a/.github/workflows/issue-handlers.yaml
+++ b/.github/workflows/issue-handlers.yaml
@@ -16,17 +16,14 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Extract issue data
-      id: extract
-      run: |
-        echo "${{ github.event.issue.body }}" > issue.txt
+  run: |
+    requester=$(echo "${{ github.event.issue.body }}" | grep -i 'requester:' | cut -d':' -f2 | xargs)
+    env=$(echo "${{ github.event.issue.body }}" | grep -i 'env:' | cut -d':' -f2 | xargs)
+    change=$(echo "${{ github.event.issue.body }}" | grep -i 'change:' | cut -d':' -f2 | xargs)
 
-        requester=$(grep -i 'requester' issue.txt | cut -d':' -f2- | xargs)
-        env=$(grep -i 'environment' issue.txt | cut -d':' -f2- | xargs)
-        change=$(grep -i 'change' issue.txt | cut -d':' -f2- | xargs)
-
-        echo "requester=$requester" >> $GITHUB_ENV
-        echo "env=$env" >> $GITHUB_ENV
-        echo "change=$change" >> $GITHUB_ENV
+    echo "requester=$requester" >> $GITHUB_ENV
+    echo "env=$env" >> $GITHUB_ENV
+    echo "change=$change" >> $GITHUB_ENV
 
     - name: Create a new branch
       run: |
